[tool.poetry]
name = "fusyona"
version = "0.1.0"
description = ""
authors = ["leandro-driguez <leandro__rodriguez@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
